Fix quizzes for branch mario
- quizzes where restructured
- merge broke mario branch
- reverting the merge seemed difficult
- these commits fix the breaking

Squashed commit of the following:

commit f36b4650b8675891efd360a074761aa48c93a9dd
Author: sam17kd <samantha.monty@uni-wuerzburg.de>
Date:   Tue Nov 17 21:06:38 2020 +0100

    qic tooltip, handout-deck.md updates

commit 702b7e3825d18d9ccb0ef37036feaa09e68ee400
Author: sam17kd <samantha.monty@uni-wuerzburg.de>
Date:   Tue Nov 17 16:14:05 2020 +0100

    clean quiz css js

commit d0fafd81359f55ccfd416e6599def39f0b5bd6dd
Author: sam17kd <samantha.monty@uni-wuerzburg.de>
Date:   Tue Nov 17 15:10:33 2020 +0100

    optimize js,css for quizzes

--- a/resource/support/css/handout.scss
+++ b/resource/support/css/handout.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("../vendor/css/light.min.css");
 @import url("../vendor/fontawesome/css/all.css");
 
@@ -81,4 +82,103 @@ header > *:last-child {
 
 body {
   -webkit-print-color-adjust: exact;
+}
+
+.slide .slide-wrapper {
+  clear: both;
+  display: inline-block;
+  width: 100%;
+  .qic,
+  .qft,
+  .qmc,
+  .qmi,
+  [class*="quiz-"] {
+    div.tooltip,
+    button.solutionButton,
+    button.resetButton {
+      display: none;
+    }
+    ul.choices,
+    ul.solutionList {
+      list-style-type: none;
+      li::before {
+        content: "○ "
+      }
+    }
+  }
+
+  .qmc,
+  .quiz-mc,
+  .quiz-multiple-choice {
+    &.inline li {
+      padding: 0.1em 0.7em 0.1em 0;
+      display: inline;
+    }
+  }
+
+  .qft,
+  [class*="quiz-f"] {
+    ul.solutionList {
+      display: none;
+    }
+    input::placeholder {
+      color: #161f27;
+    }
+  }
+
+  .qic,
+  [class*="quiz-i"] {
+    select {
+      display: none;
+    }
+  }
+
+  .qmi,
+  .quiz-mi,
+  .quiz-match-items { 
+    .matchDiv {
+      display: flex;
+      flex-direction: row-reverse;    
+      justify-content: flex-end;
+    }
+    .matchItems {
+      float: right;
+    }
+    &.plain {
+      .matchDiv {
+        flex-direction: row;
+        justify-content: initial;
+      }
+      .matchItems,
+      .matchQuestion {
+        display: flex;
+      }
+      .matchDiv, 
+      .matchQuestion {
+        justify-content: space-between;
+      }
+      .matchQuestion {
+        margin-bottom: 0.5em;
+      }
+      .matchItems {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin-right: 5em;
+        max-width: 65%;
+      }
+      .optList,
+      .options {
+        display: none;
+      }
+      .matchItem, 
+      .bucket {
+        padding-bottom: 0.5em;
+      }
+      .matchItem {
+        img {
+          max-width: 50%;
+        }
+      }
+    }
+  }
 }
